--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -5,5 +5,49 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Login</h1>
+<main class='container-fluid py-5'>
+    <div class='container'>
+
+        <h1 id='title' class='unselectable text-center'>Registration</h1>
+
+        <form action='auth/register' method='POST' id='registration-form'>
+            <div class="mb-3">
+                <input class='form-control' type='text' name='username' id='username' placeholder='Enter a username' autocomplete='off' required>              
+            </div>
+            <div class="mb-3 text-center">
+                <input class='form-control' type='password' name='password' id='password' placeholder='Enter a password' autocomplete='off' required>
+                <span id="passwordHelp" class="form-text">Must be greater than 6 characters long.</span>
+            </div>
+            <div class="mb-3">  
+                <input class='form-control' type='password' name='confirm' id='confirm' placeholder='Confirm a password' autocomplete='off' required>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="checkbox">
+                <label class="form-check-label" for="checkbox">Keep logged?</label>
+            </div>
+            <button type="submit" class="btn btn-primary" id="submit">Login</button>
+            <button type="button" class="btn btn-outline-danger" id="submit" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Registration</button>
+        </form> 
+    </div>
+</main>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Understood</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
 {% endblock %}
