--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -16,12 +16,8 @@
                 <label for="username">Username</label>
             </div>
             <div class="form-floating">
-                <input type="password" class="form-control" id="password" name="password" placeholder="Enter a password" autocomplete='off' required>
+                <input type="password" class="form-control" id="login-password" name="login-password" placeholder="Enter a password" autocomplete='off' required>
                 <label for="password">Password</label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="1" id="checkbox">
-                <label class="form-check-label" for="checkbox">Keep logged?</label>
             </div>
             <button type="submit" class="btn btn-primary" id="submit">Login</button>
             <button type="button" class="btn btn-outline-danger" id="modalRegister" data-bs-toggle="modal" data-bs-target="#BackdropRegister">Registration</button>
