--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <div class="container" id="container-indexPage">
         <div class="hstack gap-3">
             <div><h1 style="font-size: 45px;">Passwords</h1></div>
-            <div class="ms-auto"><button class="btn btn-primary btn-lg"><span class="material-icons" id="addIcon" style="line-height: unset;">add</span></button></div>
+            <div class="ms-auto"><button class="btn btn-primary btn-lg"><span class="material-icons" style="line-height: unset;">add</span></button></div>
         </div>
         <hr>
         <span id="index-phrase" class="form-text">Passwords will be save in chronological order, from the most recent to the oldest</span>
