Completed Add-Item Function, fixed keeping session

--- a/static/style.css
+++ b/static/style.css
@@ -58,11 +58,7 @@
 }
 
 
-/* Index page Stuff */
-#container-indexPage {
-    padding-top: 40px;
-}
-
+/* Index Stuff */
 #index-phrase {
     font-size: 16px;
     padding-top: 30px;
