Completed delete function, NOT FINISHED

--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -37,7 +37,7 @@
                 <div class="modal-body">
                     <div class="form-floating mb-3">
                         <input type="text" class="form-control" id="username" name="username" placeholder="Enter an username" autocomplete='off' required>
-                        <label for="register-username">Username</label>
+                        <label for="username">Username</label>
                     </div>
                     <div class="form-floating mb-3">
                         <input type="password" class="form-control" id="register-password" name="register-password" placeholder="Enter an password" onkeyup="passwordCheck();" autocomplete='off' required>
