--- a/templates/layout.html
+++ b/templates/layout.html
@@ -81,12 +81,12 @@
                 You will be redirected to the login page.
             </div>
             <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancell</button>
-            <a href="{{ url_for('auth.login') }}" class="btn btn-danger">Logout</a>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+            <a href="{{ url_for('auth.logout') }}" class="btn btn-danger">Logout</a>
             </div>
         </div>
         </div>
     </div>
-  
+
 </body>
 </html>
