--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
                                     </button>
                                     <ul class="dropdown-menu">
                                         <li><button class="dropdown-item">Modify</button></li>
-                                        <li><a class="dropdown-item" href="{{ url_for('views.delete', id=secret['id'] )}}">Delete</a></li>
+                                        <li><button class="dropdown-item" id="deleteButton" value="{{ secret['id'] }}" onclick="deleteItem(this.value);">Delete</button></li>
                                     </ul>
                                 </div>
                             </td>
