--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
 
-    <!-- Add local file CSS, Icon, JS -->
+    <!-- Add local file CSS, Icon -->
     <link rel="icon" href="/static/images/logoipsum-245.png"/>
-    <link rel="stylesheet" href="static/style.css">
-    <script src="static/index.js"></script>
+    <link rel="stylesheet" href="/static/style.css">
 
     <!-- Bootstrap Links -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -92,6 +91,9 @@
         </div>
         </div>
     </div>
+
+    <!-- Add JS file -->
+    <script src="/static/index.js"></script>
 
 </body>
 </html>
