--- a/templates/layout.html
+++ b/templates/layout.html
@@ -94,6 +94,7 @@
 
     <!-- Add JS file -->
     <script src="/static/index.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 
 </body>
 </html>
