--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,7 +21,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="{{ url_for('views.index') }}">
                 <img src="/static/images/logoipsum-245.svg" alt="Axiom" width="30" height="24">
             </a>          
             {% if session["user_id"] %}
@@ -55,12 +55,12 @@
         {% if messages %}
             {% for category, message in messages %}
                 {% if category == 'error' %}
-                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert" id="alert">
                         {{ message }}
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                     </div>
                 {% else %}
-                    <div class="alert alert-success alert-dismissible fade show" role="alert">
+                    <div class="alert alert-success alert-dismissible fade show" role="alert" id="alert">
                         {{ message }}
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                     </div>
