--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,6 @@
-/* ALl stuff */
+/* --------- 
+   ALl stuff 
+   --------- */
 .unselectable {
     -webkit-user-select: none;
     -webkit-touch-callout: none;
@@ -8,7 +10,9 @@
 }
 
 
-/* Registration Modal stuff */
+/* ------------------------ 
+   Registration Modal stuff 
+   ------------------------ */
 /* Modal register is the button in login page for open the modal */
 #modalRegister {
     margin-top: 10px;
@@ -29,7 +33,10 @@
 }
 
 
-/* Login Stuff */
+
+/* ----------- 
+   Login Stuff 
+   ----------- */
 @media (min-width: 500px) {
     #login-form {
         width: 250px;
@@ -58,7 +65,10 @@
 }
 
 
-/* Index Stuff */
+
+/* ----------- 
+   Index Stuff 
+   ----------- */
 #index-phrase {
     font-size: 16px;
     padding-top: 30px;
@@ -67,4 +77,24 @@
 #table-passwords {
     margin-top: 30px;
     text-align: center;
+}
+
+
+/* ------------ 
+   Update Stuff 
+   ------------ */
+#inputs {
+    font-size: 15px;
+    width: -moz-available;          /* For Mozzila */
+    width: -webkit-fill-available;  /* For Chrome */
+    width: stretch;                 /* Unprefixed */
+}
+
+@media (min-width: 500px) {
+    #inputs {
+        width: 500px;
+        margin-right: auto !important;
+        margin-left: auto !important;
+        margin-bottom: 25px;
+    }
 }
