--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -8,7 +8,7 @@
 <main class='container-fluid py-5'>
     <div class='container'>
 
-        <h1 id='title' class='unselectable text-center'>Login</h1>
+        <h1 id='title' class='unselectable text-center'>Axiom</h1>
 
         <form action='{{ url_for("auth.login") }}' method='POST' id='login-form'>
             <div class="form-floating mb-3">
